--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,11 @@
             "name": "Python Debugger: Nuttx_WCET_Analysis",
             "type": "debugpy",
             "request": "launch",
-            "program": "~/llvm-project-llvmorg-14.0.6/llvm/tools/llvm-tgta/testcase/Nuttx_WCET_Analysis.py",
+            "program": "~/DiskN/llvm-project/llvm/tools/llvm-tgta/testcase/Nuttx_WCET_Analysis.py",
             "console": "integratedTerminal",
             "args":[
-                "-s", "~/work-space",
-                "-n", "~/nuttxspace/nuttx",
+                "-s", "~/DiskN/work-space",
+                "-n", "~/DiskN/nuttxspace/nuttx",
                 //"-e", "/home/fyj/DiskN/nuttxspace/nuttx",
                 "-p", "qemu-armv7a:nsh"
             ]
