--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python Debugger: Nuttx_WCET_Analysis",
             "type": "debugpy",
             "request": "launch",
-            "program": "/publicfs10/fs10-m9/home/m9s003470/llvm-project-llvmorg-14.0.6/llvm/tools/llvm-tgta/testcase/Nuttx_WCET_Analysis.py",
+            "program": "/home/fyj/DiskN/llvm-project/llvm/tools/llvm-tgta/testcase/Nuttx_WCET_Analysis.py",
             "console": "integratedTerminal",
             "args":[
                 "-s", "~/DiskN/work-space",
